# kmk_firmware

./: .flake8  .git-blame-ignore-revs  .gitignore  Dockerfile  mpy-cross-all.py  noxfile.py  pyproject.toml  setup.cfg
boards/fingerpunch/ffkb/: README.md  kb-nice-nano.py
boards/fingerpunch/ffkb/kb2040/: main.py
boards/fingerpunch/ffkb/nice_nano/: boot.py  kb.py  layout.json  main.py
boards/pimoroni/keybow_2040/: is31fl3731_pixelbuf.py
docs/: Getting_Started.md
kmk/: consts.py  hid.py  key_validators.py  keys.py  kmk_keyboard.py  types.py
kmk/extensions/: led.py  lock_status.py  media_keys.py  peg_oled_display.py  peg_rgb_matrix.py  rgb.py  statusled.py
kmk/handlers/: stock.py
kmk/modules/: adns9800.py  combos.py  dynamic_sequences.py  encoder.py  holdtap.py  layers.py  modtap.py  mouse_keys.py  oneshot.py  pimoroni_trackball.py  power.py  split.py  tapdance.py
kmk/scanners/: __init__.py  digitalio.py  keypad.py
kmk/transports/: pio_uart.py
tests/: keyboard_test.py  test_combos.py  test_hold_tap.py  test_kmk_keys.py
user_keymaps/lukedrussell/: ffkb.py
util/: compile.py  mpy_cross_all.py
