[project]
name = "KMK Keyboard Firmware"
version = ""
description = "Clackety Keyboards Powered by Python"
authors = [
    {name = "@klardotsh"},
    {name = "@kdb424"},
    {name = "The KMK Community"},
]
license = {text = "See LICENSE.md"}
requires-python = ">=3.9"

dependencies = []
[project.optional-dependencies]
utils = [
    "adafruit-ampy",
    "ipdb",
    "ipython",
    "s3cmd",
    "python-magic",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"
update-strategy = "reuse"

[tool.pdm.dev-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "flake8-black",
    "flake8-isort",
    "flake8-comprehensions",
    "flake8-quotes",
    ]

[tool.black]
# since black refuses to allow single-quotes...  see locked conversation at
# https://github.com/psf/black/issues/594
skip-string-normalization = true
target = ["py39"]
# explicitly exclude user_keymaps from black formatting rules
# by black into a much harder to understand format
# extend_exclude list merges with .gitignore
extend_exclude = '''
/(
  | boards
  | docs
  | user_keymaps
)/
'''

[tool.isort]
profile = "black"
known_standard_library = [
  "analogio",
  "bitbangio",
  "bleio",
  "board",
  "busio",
  "digitalio",
  "framebuf",
  "gamepad",
  "gc",
  "machine",
  "microcontroller",
  "micropython",
  "neopixel",
  "pulseio",
  "pyb",
  "pyb",
  "pydux",
  "supervisor",
  "ubluepy",
  "uio",
  "uos",
  "usb_hid",
]
