[project]
name = "KMK Keyboard Firmware"
version = ""
description = "Clackety Keyboards Powered by Python"
authors = [
    {name = "@klardotsh"},
    {name = "@kdb424"},
    {name = "The KMK Community"},
]
dependencies = []
requires-python = ">=3.9"
license = {text = "See LICENSE.md"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.black]
target = ["py39"]
# explicitly exclude user_keymaps from black formatting rules
# by black into a much harder to understand format
# extend_exclude list merges with .gitignore
extend_exclude = """
/(
  | boards
  | docs
  | user_keymaps
)/
"""

[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"
update-strategy = "reuse"

[tool.pdm.dev-dependencies]
dev = [
    "isort",
    "black",
    "flake8>=3.9.0",
    "flake8-comprehensions",
    "flake8-isort",
    "flake8-black"]
utils = [
    "adafruit-ampy",
    "ipdb",
    "ipython",
    "s3cmd",
    "python-magic",
]
ide = [
    "neovim",
]

[tool.isort]
profile = "black"
known_standard_library = [
  "analogio",
  "bitbangio",
  "bleio",
  "board",
  "busio",
  "digitalio",
  "framebuf",
  "gamepad",
  "gc",
  "machine",
  "microcontroller",
  "micropython",
  "neopixel",
  "pulseio",
  "pyb",
  "pyb",
  "pydux",
  "supervisor",
  "ubluepy",
  "uio",
  "uos",
  "usb_hid",
]
